<resources>
    <string name="app_name">Задачи</string>

    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="new_task">Новая задача</string>
    <string name="new_list">Новый список</string>

    <string name="desc">Описание</string>
    <string name="title">Текст</string>
    <string name="isFavourite">Избранное</string>

    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="createDate">Дата создания:</string>
</resources>